[gd_scene load_steps=7 format=3 uid="uid://b6hgduw2f85h6"]

[ext_resource type="Script" path="res://player.gd" id="1_nbm33"]
[ext_resource type="PackedScene" uid="uid://msishhpanol5" path="res://chair.obj" id="2_m78al"]
[ext_resource type="PackedScene" uid="uid://cobohilsrrgsv" path="res://bullet.tscn" id="3_cwt0n"]
[ext_resource type="AudioStream" uid="uid://brv0bvdgv7fvm" path="res://sfx/440661__seansecret__classic-laser-pew.wav" id="4_urtmt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nvd3i"]
radius = 3.0

[sub_resource type="Environment" id="Environment_smah0"]
background_mode = 1
fog_light_color = Color(0.258824, 0.0470588, 0.0745098, 1)
fog_light_energy = 0.19
fog_density = 0.02

[node name="player" type="RigidBody3D"]
center_of_mass_mode = 1
inertia = Vector3(1, 1, 1)
linear_damp = 5.0
angular_damp = 5.0
script = ExtResource("1_nbm33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_nvd3i")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.557942, 1.13962)
environment = SubResource("Environment_smah0")

[node name="Chair" parent="." instance=ExtResource("2_m78al")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.557942, 1.13962)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.15188, -2.39033)
light_energy = 2.0
spot_range = 100.0
spot_angle = 55.0

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.92941, 0.0474837)
light_energy = 2.0
spot_range = 10.0
spot_angle = 60.0

[node name="BulletSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.12454, -4.38103)

[node name="Bullet" parent="BulletSpawn" instance=ExtResource("3_cwt0n")]
visible = false

[node name="FireReloadTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FireAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_urtmt")
volume_db = -12.0

[connection signal="timeout" from="FireReloadTimer" to="." method="_on_fire_reload_timer_timeout"]
